--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,3 @@
 name: Robert Smith - Aka "thedayismine"
 markdown: kramdown
-permalink: /blog/:title
-defaults:
-  - scope:
-      path: "assets/images"
-    values:
-      image: true
-
+theme: "just-the-docs"
