--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 
 # Set a path/url to a logo that will be displayed instead of the title
 #logo: "/assets/images/just-the-docs.png"
-
+theme: "just-the-docs"
 # Enable or disable the site search
 search_enabled: true
 
