--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Docs
+title: Marketman
 description: A Jekyll theme for documentation
 #url: "https://marketmann.github.io"
 #baseurl: "/just-the-docs"
