--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ search_tokenizer_separator: /[\s/]+/
 heading_anchors: true
 
 # Color scheme currently only supports "dark" or nil (default)
-color_scheme: nil
+color_scheme: dark
 
 
 compress_html:
